Fixed vertical alignment issues in forms
-- Explicitly specified .table font-size
-- lightened table border colour

--- a/sass/_constants.scss
+++ b/sass/_constants.scss
@@ -176,7 +176,7 @@ $tabbar-active-color:       $side-active-color;
 $table-head-bg:             $white;
 $table-head-color:          $gray-light;
 $table-head-font-size:      14px;
-$table-border:              $gray-lighter;
+$table-border:              $gray-lightest;
 $table-body-bg:             $white;
 $table-body-alt-bg:         $gray-ultralight;
 $table-foot-bg:             $white;
