--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -7,6 +7,7 @@
   border-collapse: collapse;
   margin: 2em 0;
   width: 100%;
+  font-size: $base;
 
   /* cell sizes for table cells */
   @for $i from 1 through 10 {
